Website is live

--- a/dev/index.html
+++ b/dev/index.html
@@ -1,264 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Prosperity Health</title>
-
-  <!-- Styles -->
-  <link rel="stylesheet" href="styles/global.css">
-  <link rel="stylesheet" href="styles/home.css">
-  <link rel="stylesheet" href="styles/services.css">
-  <link rel="stylesheet" href="styles/pricing.css">
-  <link rel="stylesheet" href="styles/about.css">
-  <link rel="stylesheet" href="styles/contact.css">
-  <link rel="stylesheet" href="style.css">
-
-  <!-- Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Parisienne&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Prosperity Health</title>
 </head>
-<body>
-  <!-- Header -->
-  <header class="header">
-    <div class="logo" onclick="on_navigation_clicked('home')">
-        <img id="logo-img" src="assets/img/tmp_olive_tree.png" />
-        <div id="logo-txt">
-          <div id="logo-name">PROSPERITY HEALTH</div>
-          <div id="catchphrase">More than just medicine</div>
-        </div>
-    </div>
-    <nav class="nav" id="nav-menu">
-      <a href="#home" id="home-link" class="nav-link active" onclick="on_navigation_clicked('home')">Home</a>
-      <a href="#services" id="services-link" class="nav-link" onclick="on_navigation_clicked('services')">Services</a>
-      <a href="#pricing" id="pricing-link" class="nav-link" onclick="on_navigation_clicked('pricing')">Pricing</a>
-      <a href="#about" id="about-link" class="nav-link" onclick="on_navigation_clicked('about')">About</a>
-      <a href="#contact" id="contact-link" class="nav-link" onclick="on_navigation_clicked('contact')">Contact</a>
-    </nav>
-    <button class="hamburger" id="hamburger" aria-label="Menu">
-      <span></span>
-      <span></span>
-      <span></span>
-    </button>
-  </header>
-
-  <!-- Content Container -->
-  <main id="content">
-    <!-- Home Page -->
-    <section id="home" class="page active">
-      <div class="hero">
+<body style="padding-top: 36px;">
+    <center>
         <h1>Prosperity Health</h1>
-        <p>More than just Medicine</p>
-      </div>
-
-      <!-- Mission Statement -->
-      <section class="home-section">
-        <h2>Our Mission</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus laoreet sapien 
-          ac mauris tincidunt, ut malesuada nisl faucibus. Suspendisse potenti. 
-        </p>
-      </section>
-
-      <section class="mini-services">
-        <div class="grid">
-          <div class="card" onclick="on_navigation_clicked('services')">
-            <img src="assets/icons/stethoscope.svg" alt="Checkups" />
-            <h3>Checkups</h3>
-            <p>Routine visits to keep you feeling your best year-round.</p>
-          </div>
-          <div class="card" onclick="on_navigation_clicked('services')">
-            <img src="assets/icons/heart.svg" alt="Preventive Care" />
-            <h3>Preventive Care</h3>
-            <p>Proactive screenings and guidance to maintain lifelong wellness.</p>
-          </div>
-          <div class="card" onclick="on_navigation_clicked('services')">
-            <img src="assets/icons/chat.svg" alt="Consultations" />
-            <h3>Free Consultations</h3>
-            <p>Direct, unrushed conversations with your doctor — every time.</p>
-          </div>
-          <div class="card" onclick="on_navigation_clicked('services')">
-            <img src="assets/icons/foot.svg" alt="Foot Zoning" />
-            <h3>Foot Zoning</h3>
-            <p>Promote relaxation, improve overall health, and balance the body's energies.</p>
-          </div>
-          <div class="card" onclick="on_navigation_clicked('services')">
-            <img src="assets/icons/coaching.svg" alt="Coaching" />
-            <h3>Healthcare Coaching</h3>
-            <p>Personalized, supportive empowerment to help you make sustainable change.</p>
-          </div>
-          <div class="card" onclick="on_navigation_clicked('services')">
-            <img src="assets/icons/employer_plans.svg" alt="Employer Plans" />
-            <h3>Employer Plans</h3>
-            <p>We ensure your greatest assets get the best medical care possible</p>
-          </div>
-        </div>
-      </section>
-
-      <!-- Overview -->
-      <section class="home-section overview">
-        <div>
-          <h3>What We Are</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed varius, 
-            lorem a viverra aliquet, turpis sapien vulputate nulla, in dignissim 
-            eros justo vitae nisl.
-          </p>
-        </div>
-        <div>
-          <h3>Who It’s For</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. 
-            Vivamus vehicula sapien ac nunc dignissim, a posuere mauris commodo.
-          </p>
-        </div>
-      </section>
-
-      <!-- Testimonials -->
-      <section class="home-section testimonials">
-        <h2>What Our Patients Say</h2>
-        <div class="testimonial-grid">
-          <div class="testimonial">
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit."</p>
-            <span>- Jane D.</span>
-          </div>
-          <div class="testimonial">
-            <p>"Aliquam eget sapien a urna luctus aliquam a nec sapien."</p>
-            <span>- Mark R.</span>
-          </div>
-          <div class="testimonial">
-            <p>"Curabitur vel libero nec urna varius dapibus ut in velit."</p>
-            <span>- Sarah L.</span>
-          </div>
-        </div>
-      </section>
-    </section>
-
-    <!-- Services Page -->
-<section id="services" class="page">
-      <h2>Our Services</h2>
-
-      <!-- Service Row 1 -->
-      <div class="service-row">
-        <img src="assets/icons/stethoscope.svg" alt="Checkups" />
-        <div class="service-text">
-          <h3>Checkups</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dignissim, sem vel
-            luctus tincidunt, risus elit malesuada libero, vel finibus sapien turpis ac augue.
-            Aliquam erat volutpat. Suspendisse suscipit, erat ut placerat convallis, tortor mi
-            cursus eros, nec laoreet augue libero id lorem.
-          </p>
-        </div>
-      </div>
-
-      <!-- Service Row 2 -->
-      <div class="service-row reverse">
-        <img src="assets/icons/heart.svg" alt="Preventive Care" />
-        <div class="service-text">
-          <h3>Preventive Care</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas at cursus lacus,
-            ut condimentum justo. Duis maximus justo id felis tristique feugiat. Nam in rhoncus
-            mauris. Curabitur faucibus enim ut urna commodo, in egestas ipsum faucibus.
-          </p>
-        </div>
-      </div>
-
-      <!-- Service Row 3 -->
-      <div class="service-row">
-        <img src="assets/icons/chat.svg" alt="Consultations" />
-        <div class="service-text">
-          <h3>Consultations</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed luctus lectus magna,
-            ac feugiat tortor mattis ut. Fusce egestas ligula non sapien blandit convallis.
-            Suspendisse vel suscipit justo. Phasellus tristique lorem ut felis gravida sodales.
-          </p>
-        </div>
-      </div>
-
-      <!-- Service Row 4 -->
-      <div class="service-row reverse">
-        <img src="assets/icons/meds.svg" alt="Prescriptions" />
-        <div class="service-text">
-          <h3>Foot Zoning</h3>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut porttitor metus id
-            justo aliquet, non faucibus turpis ullamcorper. Curabitur mattis orci ac diam
-            tincidunt, ac gravida enim sagittis. Vestibulum ante ipsum primis in faucibus orci
-            luctus et ultrices posuere cubilia curae.
-          </p>
-        </div>
-      </div>
-    </section>
-
-    <!-- Pricing Section -->
-    <section id="pricing" class="page">
-      <h2>Transparent Pricing</h2>
-      <p>No insurance, no hidden fees. Just simple monthly plans.</p>
-      <div class="pricing">
-        <div class="plan">
-          <h3>Individual</h3>
-          <p class="price">$75/month</p>
-          <p>Unlimited visits, prescriptions at-cost</p>
-        </div>
-        <div class="plan">
-          <h3>Family</h3>
-          <p class="price">$200/month</p>
-          <p>Coverage for the whole family</p>
-        </div>
-      </div>
-    </section>
-
-    <!-- Pricing Page -->
-    <section id="pricing" class="page">
-      <h2>Transparent Pricing</h2>
-      <p>No insurance, no hidden fees. Just simple monthly plans.</p>
-      <div class="pricing">
-        <div class="plan">
-          <h3>Individual</h3>
-          <p class="price">$75/month</p>
-          <p>Unlimited visits, prescriptions at-cost</p>
-        </div>
-        <div class="plan">
-          <h3>Family</h3>
-          <p class="price">$200/month</p>
-          <p>Coverage for the whole family</p>
-        </div>
-      </div>
-    </section>
-
-    <!-- About Page -->
-    <section id="about" class="page">
-      <h2>About Us</h2>
-      <p>
-        We’re a small clinic with a big mission: to bring back personal, transparent, and stress-free healthcare. 
-        Direct Primary Care means you get access to your doctor like never before — no insurance, no corporate barriers.
-      </p>
-    </section>
-
-    <!-- Contact Page -->
-    <section id="contact" class="page">
-      <h2>Get In Touch</h2>
-      <p>Email: hello@ProsperityHealth.com</p>
-      <p>Phone: (555) 123-4567</p>
-      <p>Address: 123 Main Street, YourTown, USA</p>
-    </section>
-
-    <!-- Error Page -->
-    <section id="error" class="page">
-        <h1>Not all who wander are lost... But you are!</h1>
-        <button onclick="on_navigation_clicked('home')">Wander Home</button>
-    </section>
-  </main>
-
-  <!-- Footer -->
-  <footer class="footer">
-    <p>© 2025 ProsperityHealth</p>
-  </footer>
-
-  <script src="script.js"></script>
+        <p>Affordable Healthcare is coming your way!</p>
+    </center>
 </body>
 </html>
