Updated Mission Statement. Added a left border for a bit of flare

--- a/dev/graham.html
+++ b/dev/graham.html
@@ -57,8 +57,7 @@
       <section class="home-section">
         <h2>Our Mission</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus laoreet sapien 
-          ac mauris tincidunt, ut malesuada nisl faucibus. Suspendisse potenti. 
+          At Prosperity Health, our passion is to empower individuals, families, and small businesses owners to personalized healthcare, with improved access and cost effective solutions that are not dictated by traditional insurance companies.  We navigate you through the challenging nuances of traditional medicine and provide modern-day alternatives to optimizing your healthcare independence and autonomy, allowing you to live the most proactive life you want.
         </p>
       </section>
 
