Corrected Font family for header text

--- a/dev/graham.html
+++ b/dev/graham.html
@@ -11,8 +11,7 @@
   <link rel="stylesheet" href="styles/services.css">
   <link rel="stylesheet" href="styles/pricing.css">
   <link rel="stylesheet" href="styles/about.css">
-  <link rel="stylesheet" href="styles/contact.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles/resources.css">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -34,8 +33,7 @@
       <a href="#services" id="services-link" class="nav-link" onclick="on_navigation_clicked('services')">Services</a>
       <a href="#pricing" id="pricing-link" class="nav-link" onclick="on_navigation_clicked('pricing')">Pricing</a>
       <a href="#about" id="about-link" class="nav-link" onclick="on_navigation_clicked('about')">About</a>
-      <a href="#contact" id="contact-link" class="nav-link" onclick="on_navigation_clicked('contact')">Contact</a>
-      <a href="#resources" id="resources" class="nav-link" onclick="on_navigation_clicked('resources')">Resources</a>
+      <a href="#resources" id="resources-link" class="nav-link" onclick="on_navigation_clicked('resources')">Resources</a>
     </nav>
     <button class="hamburger" id="hamburger" aria-label="Menu">
       <span></span>
@@ -221,17 +219,44 @@
       </p>
     </section>
 
-    <!-- Contact Page -->
-    <section id="contact" class="page">
-      <h2>Get In Touch</h2>
-      <p>Email: hello@ProsperityHealth.com</p>
-      <p>Phone: (555) 123-4567</p>
-      <p>Address: 123 Main Street, YourTown, USA</p>
-    </section>
-
     <!-- Resources Page -->
      <section id="resources" class="page">
-      <h1>Resources</h1>
+      <div id="contact-wrapper">
+        <h1>Contact Us</h1>
+        <table>
+          <tr>
+            <td><strong>Address:</strong></td>
+            <td>More to come...</td>
+          </tr>
+
+          <tr>
+            <td><strong>Phone:</strong></td>
+            <td>More to come...</td>
+          </tr>
+
+          <tr>
+            <td><strong>Email:</strong></td>
+            <td>More to come...</td>
+          </tr>
+        </table>
+      </div>
+
+      <div id="patient-portal-wrapper">
+
+      </div>
+
+      <div id="big-stuff-wrapper">
+        <iframe width="560" height="315"
+          src="https://www.youtube-nocookie.com/embed/rzLFs9kROoQ?si=m3Gi4mdsX4b1ky2x"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen>
+        </iframe>
+      </div>
+
+
      </section>
 
     <!-- Error Page -->
