Made title font and catch phrase in header different colors

--- a/dev/graham.html
+++ b/dev/graham.html
@@ -24,7 +24,7 @@
         <div class="logo" onclick="on_navigation_clicked('home')">
             <img id="logo-img" src="assets/img/tmp_olive_tree.png" />
             <div id="logo-txt">
-                <div id="logo-name">PROSPERITY HEALTH</div>
+                <div id="logo-name">Prosperity Health</div>
                 <div id="catchphrase">More than just medicine</div>
             </div>
         </div>
