--- a/dev/graham.html
+++ b/dev/graham.html
@@ -49,8 +49,9 @@
         <!-- Home Page -->
         <section id="home" class="page active">
             <div class="hero">
-                <h1>Prosperity Health</h1>
-                <p>Liberating Healthcare and Wellness</p>
+                <h1>PROSPERITY HEALTH</h1>
+                <p>Liberating Healthcare</p>
+                <p>and Wellness</p>
             </div>
 
             <!-- Mission Statement -->
