Added additional cards

--- a/dev/graham.html
+++ b/dev/graham.html
@@ -79,7 +79,7 @@
                     <div class="card" onclick="on_navigation_clicked('services')">
                         <img src="assets/icons/chat.svg" alt="Consultations" />
                         <h3>Free Consultations</h3>
-                        <p>Direct, unrushed conversations with your doctor — every time.</p>
+                        <p>Direct, unrushed conversations with your provider — every time.</p>
                     </div>
 
                     <div class="card" onclick="on_navigation_clicked('services')">
@@ -97,7 +97,31 @@
                     <div class="card" onclick="on_navigation_clicked('services')">
                         <img src="assets/icons/employer_plans.svg" alt="Employer Plans" />
                         <h3>Employer Plans</h3>
-                        <p>We ensure your greatest assets get the best medical care possible</p>
+                        <p>We ensure your greatest assets get the most affordable medical care possible</p>
+                    </div>
+
+                    <div class="card" onclick="on_navigation_clicked('services')">
+                        <img src="assets/icons/calendar.svg" alt="Monthly Plans" />
+                        <h3>Monthly Plans</h3>
+                        <p>Affordable plans for every individual or family needs</p>
+                    </div>
+
+                    <div class="card" onclick="on_navigation_clicked('services')">
+                        <img src="assets/icons/number-1.svg" alt="One Time Visit" />
+                        <h3>One Time Visit</h3>
+                        <p>Don't want to commit to a plan, but need urgent attention</p>
+                    </div>
+
+                    <div class="card" onclick="on_navigation_clicked('services')">
+                        <img src="assets/icons/hospital.svg" alt="Catestrophic Coverage" />
+                        <h3>Catestrophic Coverage</h3>
+                        <p>Without insurance? SAve your money & use it when you <u>NEED IT</u></p>
+                    </div>
+
+                    <div class="card" onclick="on_navigation_clicked('services')">
+                        <img src="assets/icons/clipboard.svg" alt="Common Issues" />
+                        <h3>Common Issues</h3>
+                        <p>Depression / Anxiety, ADHD, Dermatology, Prescription Refills, Hypertension, Thyroid, Diabetes, Etc.</p>
                     </div>
                 </div>
             </div>
