Changes in in-person meeting

--- a/dev/graham.html
+++ b/dev/graham.html
@@ -51,7 +51,8 @@
             <div class="hero">
                 <h1>PROSPERITY HEALTH</h1>
                 <p>Liberating Healthcare</p>
-                <p>and Wellness</p>
+                <p id="smaller">and</p>
+                <p>Empowering Wellness</p>
             </div>
 
             <!-- Mission Statement -->
@@ -229,7 +230,7 @@
         <!-- Pricing Page -->
         <section id="pricing" class="page row">
             <div class="insurance-source-wrapper">
-                <h2>Private Health Insurance</h2>
+                <h2>Member Options</h2>
 
                 <div class="coverage-tiers row">
                     <!-- Individual Private Health Tier -->
@@ -324,7 +325,7 @@
             </div>
 
             <div class="insurance-source-wrapper">
-                <h2>Employer Health Insurance</h2>
+                <h2>Employer Options</h2>
 
                 <div class="coverage-tiers row">
                     <!-- Individual Private Health Tier -->
